# RN-animated-floating-button

./: CONTRIBUTING.md  LICENSE  README.md  package.json  rn-animated-floating-button.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnanimatedfloatingbutton/: RnAnimatedFloatingButtonModule.java  RnAnimatedFloatingButtonPackage.java
android/src/newarch/: RnAnimatedFloatingButtonSpec.java
android/src/oldarch/: RnAnimatedFloatingButtonSpec.java
cpp/: rn-animated-floating-button.cpp  rn-animated-floating-button.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/rnanimatedfloatingbuttonexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/RnAnimatedFloatingButtonExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RnAnimatedFloatingButtonExample.xcodeproj/: project.pbxproj
example/ios/RnAnimatedFloatingButtonExample.xcodeproj/xcshareddata/xcschemes/: RnAnimatedFloatingButtonExample.xcscheme
example/ios/RnAnimatedFloatingButtonExampleTests/: RnAnimatedFloatingButtonExampleTests.m
example/src/: App.tsx
ios/: RnAnimatedFloatingButton.h  RnAnimatedFloatingButton.mm
src/: NativeRnAnimatedFloatingButton.ts  index.tsx
